--- a/app/config/behaviorsettings.ui
+++ b/app/config/behaviorsettings.ui
@@ -95,6 +95,13 @@
         </property>
        </widget>
       </item>
+      <item row="7" column="0" colspan="2">
+        <widget class="QCheckBox" name="kcfg_RememberFullscreen">
+         <property name="text">
+          <string>Remember and restore window fullscreen state</string>
+         </property>
+        </widget>
+       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QCheckBox" name="kcfg_KeepOpen">
         <property name="text">
